--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,11 @@ data_sources:
 
   - name: Fertilizers from Walmart
     type: scrape
-    url: 'https://www.walmart.com/ip/Pennington-Rejuvenate-Organic-and-Natural-All-Purpose-Plant-Food-Fertilizer-Feeds-4-Months-4-lb/1435190801'
+    url:
+       - 'https://www.walmart.com/ip/Pennington-Rejuvenate-Organic-and-Natural-All-Purpose-Plant-Food-Fertilizer-Feeds-4-Months-4-lb/1435190801'
+       - 'https://www.walmart.com/ip/Scotts-22315-Turf-Builder-Lawn-Food-37-5-Lbs-Quantity-1/29937847'
+       - 'https://www.walmart.com/ip/Expert-Gardener-Tomato-Vegetable-Garden-Plant-Food-Fertilizer-12-10-5-Fertilizer-4-lb/1841213178'
+       - 'https://www.walmart.com/ip/Farmer-s-Secret-Fruit-Bloom-Booster-Fertilizer-32oz-Super-Concentrated-Increases-Flowering-Yield-All-Varieties-Fruits-Vegetables-Flowers/5217441471'
     target_element:
       price: 'span[itemprop="price"]'
       name: 'h1[itemprop="name"]'
